Update intro paragraph for clarity and impact

--- a/index.html
+++ b/index.html
@@ -21,8 +21,9 @@
 					<div id="intro">
 						<h1>VERAXIOME<br />
 						Systems</h1>
-						<p>We build reliable analytics and performance systems for professional services businesses.</p>
+						<p>Systems that make your business measurable, reliable, and scalable.</p>
 						<ul class="actions">
+							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Continue</a></li>
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Schedule a Call</a></li>
 						</ul>
 					</div>
