Modify intro text and update navigation links
Updated navigation links and added a new paragraph in the intro section.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 						<h1>VERAXIOME<br />
 						Systems</h1>
 						<p>Systems that make your business measurable, reliable, and scalable.</p>
+						<p>Veraxiome designs analytics, automation, and performance systems for professional services and growing SMBs.</p>
 						<ul class="actions">
 							<li><a href="#header" class="button icon solo fa-arrow-down scrolly">Schedule a Call</a></li>
 						</ul>
@@ -29,15 +30,16 @@
 
 				<!-- Header -->
 					<header id="header">
-						<a href="index.html" class="logo">Services</a>
+						<a href="index.html" class="logo">Schedule a call</a>
 					</header>
 
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">This is Massively</a></li>
-							<li><a href="generic.html">Generic Page</a></li>
-							<li><a href="elements.html">Elements Reference</a></li>
+							<li class="active"><a href="index.html">WHAT WE DO</a></li>
+							<li><a href="generic.html">Analytics & Reporting Systems</a></li>
+							<li><a href="elements.html">Automation & Operational Systems</a></li>
+							<li><a href="elements.html">Performance Optimization & Advisory</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
