--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">WHAT WE DO</a></li>
+							<li class="active"><a href="index.html">This is Massively</a></li>
 							<li><a href="generic.html">Analytics & Reporting Systems</a></li>
 							<li><a href="elements.html">Automation & Operational Systems</a></li>
 							<li><a href="elements.html">Performance Optimization & Advisory</a></li>
