Update navigation link text for clarity

--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">What We Do</a></li>
+							<li class="active"><a href="index.html">What a<br />
+								We Do</a></li>
 							<li><a href="generic.html">Analytics & Reporting Systems</a></li>
 							<li><a href="elements.html">Automation & Operational Systems</a></li>
 							<li><a href="elements.html">Performance Optimization & Advisory</a></li>
@@ -45,7 +46,6 @@
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 						</ul>
 					</nav>
 
