Update navigation and featured post content in index.html

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">What a<br />
+							<li class="active"><a href="index.html">What <br />
 								We Do</a></li>
 							<li><a href="generic.html">Analytics & Reporting Systems</a></li>
 							<li><a href="elements.html">Automation & Operational Systems</a></li>
@@ -55,12 +55,12 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date">April 25, 2017</span>
-									<h2><a href="#">And this is a<br />
-									massive headline</a></h2>
-									<p>Aenean ornare velit lacus varius enim ullamcorper proin aliquam<br />
-									facilisis ante sed etiam magna interdum congue. Lorem ipsum dolor<br />
-									amet nullam sed etiam veroeros.</p>
+									"<span class="date">April 25, 2017</span>"
+									<h2><a href="#">Analytics & Reporting<br />
+									Systems</a></h2>
+									<p>We design clear, decision-ready dashboards that replace spreadsheets, <br />
+									guesswork, and disconnected tools.<br />
+									</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions">
