Modify featured post title and date structure
Updated featured post section with new title and date.

--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									"<span class="date">April 25, 2017</span>"
-									<h2><a href="#">Analytics & Reporting<br />
-									Systems</a></h2>
+									<span class="date"</span>
+									<h2><a href="#">What We Do</a></h2>
+									<h3></a>Analytics & Reporting Systems</a></h3>
 									<p>We design clear, decision-ready dashboards that replace spreadsheets, <br />
 									guesswork, and disconnected tools.<br />
 									</p>
