Enhance featured post section with new headings
Added additional headings for Automation and Performance Optimization.

--- a/index.html
+++ b/index.html
@@ -55,12 +55,15 @@
 						<!-- Featured Post -->
 							<article class="post featured">
 								<header class="major">
-									<span class="date"</span>
+									
 									<h2><a href="#">What We Do</a></h2>
 									<h3></a>Analytics & Reporting Systems</a></h3>
 									<p>We design clear, decision-ready dashboards that replace spreadsheets, <br />
 									guesswork, and disconnected tools.<br />
 									</p>
+									<h3></a>Automation & Operational Systems</a></h3>
+									<h3></a>Performance Optimization & Advisory</a></h3>
+									
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions">
