Add content for Automation and Performance Optimization

--- a/index.html
+++ b/index.html
@@ -62,7 +62,14 @@
 									guesswork, and disconnected tools.<br />
 									</p>
 									<h3></a>Automation & Operational Systems</a></h3>
+									<p>We streamline workflows, data flows, and internal processes so your business runs <br />
+									consistently—without manual overhead.<br />
+									</p>
 									<h3></a>Performance Optimization & Advisory</a></h3>
+									<p>We identify bottlenecks across systems, metrics, and operations, <br />
+									then implement improvements that actually stick.<br />
+									</p>
+									 
 									
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
