Fix typo in address from 'Seattlw' to 'Seattle'

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 							<section class="alt">
 								<h3>Address</h3>
 								<p>Terry Ave<br />
-								Seattlw, WA 98101</p>
+								Seattle, WA 98101</p>
 							</section>
 							<section>
 								<h3>Phone</h3>
