Update navigation links in index.html

--- a/index.html
+++ b/index.html
@@ -36,11 +36,10 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">What <br />
-								We Do</a></li>
-							<li><a href="generic.html">Analytics & Reporting Systems</a></li>
-							<li><a href="elements.html">Automation & Operational Systems</a></li>
-							<li><a href="elements.html">Performance Optimization & Advisory</a></li>
+							<li class="active"><a href="index.html">What We Do</a></li>
+							<li><a>Analytics & Reporting Systems</a></li>
+							<li><a>Automation & Operational Systems</a></li>
+							<li><a>Performance Optimization & Advisory</a></li>
 						</ul>
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
