--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 				<!-- Nav -->
 					<nav id="nav">
 						<ul class="links">
-							<li class="active"><a href="index.html">What We Do</a></li>
+							<li class="active"><a href="index.html">Whelcome</a></li>
 							<li><a>Analytics & Reporting Systems</a></li>
 							<li><a>Automation & Operational Systems</a></li>
 							<li><a>Performance Optimization & Advisory</a></li>
